# groundstack

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: quickstart.md
src/groundstack/: __init__.py  canonicalize.py  cli.py  filetypes.py  graph.py  models.py  planner.py  providers.py  render.py  scanner.py  serialization.py  symbols.py  tokenizer.py
tests/: conftest.py  test_cli.py  test_models.py  test_performance.py  test_planner.py  test_render.py  test_scan.py  test_symbols.py
tests/fixtures/js_app/: README.md
tests/fixtures/js_app/src/: api.ts  auth.ts  index.ts
tests/fixtures/mixed_repo/: README.md  generated.json
tests/fixtures/mixed_repo/.github/workflows/: ci.yml
tests/fixtures/mixed_repo/config/: settings.toml
tests/fixtures/mixed_repo/data/: app.json
tests/fixtures/mixed_repo/scripts/: deploy.sh
tests/fixtures/python_service/: README.md  config.yaml
tests/fixtures/python_service/service/: api.py  auth.py
tests/fixtures/python_service/tests/: test_auth.py
tests/snapshots/: public_model_schemas.json  python_service_bundle.json  python_service_prompt.txt
